构建RAG本地知识库，上传pdf加入知识库

--- a/api/etc/chat.yaml
+++ b/api/etc/chat.yaml
@@ -34,9 +34,13 @@ VectorDB:
   Port: 5432
   DBName: "dayu_ai_agent"
   User: "root"
-  Password: "*******"
+  Password: "***********"
   Table: "vector_store"
   MaxConn: 20
   EmbeddingModel: "nomic-embed-text"
+  Knowledge:
+    MaxChunkSize: 1000  # 知识块最大长度
+    TopK: 3  # 检索返回的知识片段数量
+    MaxContextLength: 500  # 注入上下文的截断长度
 
-UniPDFLicense: "*********"
+UniPDFLicense: "**********"
